@@ -264,6 +264,7 @@
 ||cyberrecoverygroup.com^
 ||cygjhub.xyz^
 ||czhboobs.com^
+||czjtpro.xyz^
 ||czlbxvsd.com^
 ||d2vm7.com^
 ||da588.net^
@@ -273,6 +274,7 @@
 ||dailymarketing9.com^
 ||dangchong.world^
 ||dangousfl.buzz^
+||darenxui.com^
 ||dasqf.asia^
 ||datesrud.com^
 ||dayone1.live^
@@ -481,6 +483,7 @@
 ||gtodm.com.tw^
 ||gubbancie.com^
 ||gugu.fund^
+||gugufacf.com^
 ||gugufafacai.com^
 ||gugufund.com^
 ||guhailaoniu.com^
@@ -524,6 +527,7 @@
 ||honeyslashie.com^
 ||hotelacuariotulum.com^
 ||houstorys.shop^
+||hrenblack.shop^
 ||hrensoom.com^
 ||hrenyomicv.com^
 ||hsin168.com^
@@ -626,6 +630,7 @@
 ||kathy.buzz^
 ||katrina2929.wixsite.com^
 ||kbb.tw^
+||keepgame.ru^
 ||keeptrends1.com^
 ||kelbyone.lt.acemlnb.com^
 ||kevfutur.online^
@@ -649,6 +654,7 @@
 ||kngoa.online^
 ||ko.gl^
 ||ko1788.com^
+||koogo.shop^
 ||kopitiv.com^
 ||kp-apk.com^
 ||kpty008.com^
@@ -689,6 +695,7 @@
 ||livechat337.xyz^
 ||livechatxx.xyz^
 ||liwzzxisds.shop^
+||lkjvbn.com^
 ||loan588.cc^
 ||loan588.com^
 ||loihdr.vip^
@@ -768,6 +775,7 @@
 ||myshopever.com^
 ||mystock.life^
 ||mystock1688.com^
+||mystock1688.xyz^
 ||na5.nl^
 ||naturefc.com.hk^
 ||nbatop50.com^
@@ -830,6 +838,7 @@
 ||paiatialdates.net^
 ||paktormeet.com^
 ||payeshop.site^
+||pcgameslab.net^
 ||pcgws.com^
 ||pcv.buzz^
 ||pdpdsum.com^
@@ -876,6 +885,7 @@
 ||qrurl.net^
 ||qstarlife.com^
 ||qtaiguzixun.com^
+||qtyqt.com^
 ||qxmaqs.bond^
 ||qyhost168.com^
 ||qzbzxgj.cn^
@@ -957,6 +967,7 @@
 ||sin624922.wixsite.com^
 ||sjawnmgh3232.com^
 ||skloiw.shop^
+||sks608.shop^
 ||skuwqo0013.com^
 ||skyinvest01.com^
 ||sleepyinvest.com^
@@ -1085,6 +1096,7 @@
 ||twgp.life^
 ||twgpzx.com^
 ||twgushi.shop^
+||twgushie.com^
 ||twhqn.asia^
 ||twhuil.com^
 ||twjingrong.online^
@@ -1156,6 +1168,7 @@
 ||wdsdm.asia^
 ||wealthpress98951.lt.acemlnb.com^
 ||web01.me^
+||webube.com^
 ||weikh.shop^
 ||weily.com.tw^
 ||weilyyeh.com.tw^
