@@ -1,0 +1,7 @@
+{
+    "CHANNEL_ACCESS_TOKEN":"",
+    "CHANNEL_SECRET":"",
+    "CERT":"",
+    "PRIVKEY":""
+}
+    
