@@ -1,5 +1,10 @@
 # 歷史更新 History Update
 
+* 20230420 Update
+  * 加入 LineBot Code
+  * 更新 個人不想看的廣告或網站
+  * 更新 Dcard受害文章
+
 * 20230419 Update
   * 加入 所需要的script
   * 更新 內容農場與多導向可能危險網站
